<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_menu_view"
            android:background="#ffff"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/help_eye" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_menu_search"
            android:background="#ffff"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/help_search" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/help_year" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/help_month"  />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/help_time"  />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/help_money"  />
    </LinearLayout>

      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/help_charts"  />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/colorAccent"
            android:gravity="center_vertical"
            android:text="@string/help_warn"  />
    </LinearLayout>
</LinearLayout>