<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/date_tv"
            android:text="@string/title"
            android:textSize="@dimen/title"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/query_month"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/query_month"
            android:layout_alignParentRight="true"
            android:textColor="#ffffff"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/line"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/query_month"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#ffffff" />

        <Button
            android:id="@+id/query_year"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/query_year"
            android:layout_toLeftOf="@+id/line"
            android:textColor="#ffffff"
            android:background="@color/colorPrimaryDark"/>

        <ImageButton
            android:id="@+id/back"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/ic_menu_revert"/>
    </RelativeLayout>

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"/>
</LinearLayout>