<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_layout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/back"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/ic_menu_revert"/>

        <TextView
            android:id="@+id/show_time"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/title"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/cost_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost_type"
            android:textSize="@dimen/edit"
            android:maxLines="1"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/cost_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost_money_et"
            android:textSize="@dimen/edit"
            android:maxLines="1"
            android:inputType="number|numberDecimal"
            android:layout_margin="10dp"/>

        <DatePicker
            android:id="@+id/date"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:datePickerMode="spinner"
            android:calendarViewShown="false">
        </DatePicker>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>